[tool.poetry]
name = "option-stream-okx"
version = "0.1.0"
description = "Real-time OKX Option Order Book pipeline"
authors = ["Your Name <hungwei.francis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^11.0"
kafka-python = "^2.0"
pymongo = "^4.6"



[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
black = "^24.0"
isort = "^5.12"
ruff = "^0.1.1"

